--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pefish/js-coin-trx",
-  "version": "0.1.3",
+  "version": "0.1.5",
   "description": "",
   "keywords": [
     "common",
@@ -25,7 +25,7 @@
     "build": "rm -rf lib && rm -rf types && tsc",
     "test": "mocha --timeout 15000 --require ts-node/register src/**/*.test.ts",
     "t": "mocha --timeout 15000 --require ts-node/register",
-    "prepublish": "yarn build"
+    "prepublish": "yarn build && yarn test"
   },
   "dependencies": {
     "@pefish/js-node-assist": "^0.6.15",
