--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pefish/js-coin-trx",
-  "version": "0.1.17",
+  "version": "0.2.2",
   "description": "",
   "keywords": [
     "common",
@@ -25,7 +25,7 @@
     "build": "rm -rf lib && rm -rf types && tsc",
     "test": "mocha --timeout 150000 --require ts-node/register src/**/*.test.ts",
     "t": "mocha --timeout 150000 --require ts-node/register",
-    "prepublish": "yarn build && yarn test"
+    "prepublish": "yarn build"
   },
   "dependencies": {
     "@pefish/js-decorator": "^0.0.6",
@@ -34,7 +34,7 @@
     "bip32": "^2.0.4",
     "bip39": "^3.0.2",
     "ethereumjs-util": "^6.2.0",
-    "tronweb": "^2.8.1"
+    "tronweb": "^3.0.0"
   },
   "devDependencies": {
     "@types/chai": "^4.1.7",
