--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pefish/js-coin-trx",
-  "version": "1.1.1",
+  "version": "1.1.3",
   "description": "",
   "keywords": [
     "common",
@@ -23,9 +23,9 @@
   },
   "scripts": {
     "build": "rm -rf lib && rm -rf types && tsc",
-    "test": "mocha --timeout 150000 --require ts-node/register src/**/*.test.ts",
-    "t": "mocha --timeout 150000 --require ts-node/register",
-    "prepublish": "yarn build"
+    "test": "mocha --exit --timeout 150000 --require ts-node/register src/**/*.test.ts",
+    "t": "mocha --exit --timeout 150000 --require ts-node/register",
+    "prepublish": "yarn build && yarn test"
   },
   "dependencies": {
     "@pefish/js-decorator": "^0.0.6",
